Fixed input align center

--- a/src/app/app-features/product-details/_ProductDetails.scss
+++ b/src/app/app-features/product-details/_ProductDetails.scss
@@ -123,6 +123,7 @@
 }
 
 .product-qty-input {
+  text-align: center;
   width: 25px;
   background-color: $background;
   display: flex;
